--- a/azuredevops/order-pipeline.yml
+++ b/azuredevops/order-pipeline.yml
@@ -14,8 +14,28 @@ variables:
   environment: "dev"
   artifactName: 'storehelmchart'
   helmChartName: 'mychart'
+  imageTag: v1 #$(Build.BuildId)   
+  imageName: 'order'
 
 stages:
+  - stage: Build
+    displayName: Build and Publish
+    jobs:
+      - job: BuildPublishDockerImages
+        displayName: Build Publish Docker Images
+        steps:
+          - task: DockerInstaller@0
+            displayName: Install Docker
+            inputs:
+              dockerVersion: '17.09.0-ce'
+
+          - template: appTemplates/build.yml
+            parameters:
+              acrServiceConnection: $(acrServiceConnection)
+              imageName: $(imageName)
+              dockerFilePath: '$(Build.sourcesdirectory)/app/order-service/Dockerfile'
+              tag: $(imageTag)
+
   - stage: HelmPackagePush
     displayName: Helm Package and Push
     jobs:
@@ -81,7 +101,7 @@ stages:
           namespace: $(namespace)
           command: upgrade
           chartType: FilePath
-          chartPath: './mychart/config'
+          chartPath: './mychart/order'
           releaseName: 'storeapp'
           install: true
           waitForExecution: true                  
