--- a/azuredevops/order-pipeline.yml
+++ b/azuredevops/order-pipeline.yml
@@ -37,75 +37,55 @@ stages:
               dockerFilePath: '$(Build.sourcesdirectory)/app/order-service/Dockerfile'
               tag: $(imageTag)
 
-  - stage: HelmPackagePush
-    displayName: Helm Package and Push
-    jobs:
-    - job: Helm
-      pool:
-        vmImage: 'ubuntu-latest'
-      steps:
-      - checkout: self
-
-      - task: AzureCLI@2
-        inputs:
-          azureSubscription: $(azureSubscription)
-          scriptType: bash
-          scriptLocation: inlineScript
-          inlineScript: |
-            echo "Package Helm chart"
-            helm package ./${{ variables.helmChartPath }} --version ${{ variables.helmChartVersion }} -d .
-
-            echo "Login to ACR for Helm push"
-            az acr login --name ${{ variables.acrName }}
-
-            sed -i "s/tag:.*/tag: $(imageTag)/" ./${{ variables.helmChartName }}/order/values.yaml
-            cat ./${{ variables.helmChartName }}/order/values.yaml
-
-            echo "Enabling OCI support"
-            export HELM_EXPERIMENTAL_OCI=1
-
-            echo "Push Helm chart to ACR"
-            helm push ./${{ variables.helmChartName }}-${{ variables.helmChartVersion }}.tgz oci://${{ variables.acrName }}.azurecr.io/helm
+          - task: PublishPipelineArtifact@1
+            displayName: Publish Manifest
+            inputs:
+              artifactName: $(chartName)
+              path: $(chartName)
 
   - stage: Deploy
-    displayName: Deploy to AKS
-    dependsOn: HelmPackagePush
     jobs:
-    - job: Deploy
-      pool:
-        vmImage: 'ubuntu-latest'
-      steps:
-      - checkout: self
+    - deployment: DeployAKS
+      displayName: Deploy AKS
+      environment: $(environment)
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - download: current
+                artifact: $(chartName)
 
-      - task: AzureCLI@2
-        inputs:
-          azureSubscription: $(serviceConnection)
-          scriptType: bash
-          scriptLocation: inlineScript
-          inlineScript: |
-            echo "Set Helm OCI support"
-            export HELM_EXPERIMENTAL_OCI=1
+              - script: |
+                  echo "Workspace Directory: $(Pipeline.Workspace)"
+                  ls -R "$(Pipeline.Workspace)"
 
-            echo "Login to ACR"
-            az acr login --name ${{ variables.acrName }}
+              - task: AzureCLI@2
+                displayName: Get AKS Credentials
+                inputs:
+                  azureSubscription: $(serviceConnection)
+                  scriptType: bash
+                  scriptLocation: inlineScript
+                  inlineScript: |
+                    echo "Getting AKS credentials..."
+                    az aks get-credentials --name $(aksCluster) --resource-group $(aksResourceGroup) --overwrite-existing
 
-            echo "Login to AKS"
-            az aks get-credentials --name $(aksCluster) --resource-group $(aksResourceGroup) --overwrite-existing
+                    echo "Updating image tag in values.yaml..."
+                    sed -i 's/\(tag:\s*\).*/\1$(imageTag)/' $(Pipeline.Workspace)/$(chartName)/order/values.yaml
+                    echo "Updated values.yaml:"
+                    cat $(Pipeline.Workspace)/$(chartName)/order/values.yaml
 
-            echo "Pull Helm chart from ACR"
-            helm pull oci://${{ variables.acrName }}.azurecr.io/helm/${{ variables.helmChartName }} --version ${{ variables.helmChartVersion }} --untar
+              - task: HelmDeploy@1
+                displayName: Helm Upgrade/Install
+                inputs:
+                  connectionType: 'Azure Resource Manager'
+                  azureSubscription: $(serviceConnection)
+                  azureResourceGroup: $(aksResourceGroup)
+                  kubernetesCluster: $(aksCluster)
+                  namespace: $(namespace)
+                  command: upgrade
+                  chartType: FilePath
+                  chartPath: '$(Pipeline.Workspace)/$(chartName)/order'
+                  releaseName: 'order'
+                  install: true
+                  waitForExecution: false                  
 
-      - task: HelmDeploy@1
-        displayName: Helm Upgrade/Install
-        inputs:
-          connectionType: 'Azure Resource Manager'
-          azureSubscription: $(serviceConnection)
-          azureResourceGroup: $(aksResourceGroup)
-          kubernetesCluster: $(aksCluster)
-          namespace: $(namespace)
-          command: upgrade
-          chartType: FilePath
-          chartPath: './${{ variables.helmChartName }}/order/'
-          releaseName: 'storeapp'
-          install: true
-          waitForExecution: true                  
