--- a/azuredevops/store-front-pipeline.yml
+++ b/azuredevops/store-front-pipeline.yml
@@ -66,6 +66,11 @@ stages:
                     echo "Getting AKS credentials..."
                     az aks get-credentials --name $(aksCluster) --resource-group $(aksResourceGroup) --overwrite-existing
 
+                    echo "Updating image tag in values.yaml..."
+                    sed -i 's/\(tag:\s*\).*/\1$(imageTag)/' $(Pipeline.Workspace)/$(chartName)/store-front/values.yaml
+                    echo "Updated values.yaml:"
+                    cat $(Pipeline.Workspace)/$(chartName)/store-front/values.yaml
+
               - task: HelmDeploy@1
                 displayName: Helm Upgrade/Install
                 inputs:
