--- a/storehelmchart/store-front/templates/store-front-service.yml
+++ b/storehelmchart/store-front/templates/store-front-service.yml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mychart.fullname" . }}-store-front
-  labels:
-  {{- include "mychart.labels" . | nindent 4 }}
+  name: store-front
 spec:
-  type: {{ .Values.storeFront.type }}
+  ports:
+    - port: 80
+      targetPort: 8080
   selector:
     app: store-front
-    {{- include "mychart.selectorLabels" . | nindent 4 }}
-  ports:
-  {{- .Values.storeFront.ports | toYaml | nindent 2 }}
+  type: LoadBalancer
